# RustAdvent2023

./: Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: lib.rs
daily-template/: Cargo.toml
daily-template/benches/: benchmarks.rs
daily-template/src/: part1.rs  part2.rs
day01/: Cargo.toml
day01/src/: lib.rs  part1.rs  part2.rs
day02/: Cargo.toml
day02/src/: part1.rs  part2.rs
day03/: Cargo.toml
day03/src/: part1.rs  part2.rs
day04/: Cargo.toml
day04/src/: part1.rs  part2.rs
day05/: Cargo.toml
day05/src/: part1.rs  part2.rs
day06/: Cargo.toml
day06/src/: part1.rs  part2.rs
day07/: Cargo.toml
day07/src/: part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: part1.rs  part2.rs
day09/: Cargo.toml
day09/src/: lib.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: input_clean.txt  lib.rs  part1.rs  part1_clean.rs  part2.rs  part2_clean.rs
day11/: Cargo.toml
day11/src/: lib.rs  part1.rs  part2.rs
day12/: Cargo.toml
day12/src/: part1.rs  part2.rs
day13/: Cargo.toml
day13/benches/: benchmarks.rs  example.rs
day13/src/: part1.rs  part2.rs
day14/: Cargo.toml
day14/benches/: benchmarks.rs
day14/src/: input.txt  lib.rs  part1.rs  part2.rs
day15/: Cargo.toml
day15/benches/: benchmarks.rs
day15/src/: lib.rs  part1.rs  part2.rs
day16/: Cargo.toml
day16/benches/: benchmarks.rs
day16/src/: lib.rs  part1.rs  part2.rs  part2_fast.rs
day17/: Cargo.toml
day17/benches/: benchmarks.rs
day17/src/: part1.rs  part2.rs
day18/: Cargo.toml
day18/benches/: benchmarks.rs
day18/src/: part1.rs  part2.rs
day19/: Cargo.toml
day19/benches/: benchmarks.rs
day19/src/: part1.rs  part2.rs
day20/: Cargo.toml
day20/benches/: benchmarks.rs
day20/src/: part1.rs  part2.rs
day21/: Cargo.toml
day21/benches/: benchmarks.rs
day21/src/: input.txt  lib.rs  main.py  part1.rs  part2.rs
day22/: Cargo.toml
day22/benches/: benchmarks.rs
day22/src/: lib.rs  part1.rs  part1_fast.rs  part2.rs  part2_fast.rs
day23/: Cargo.toml
day23/benches/: benchmarks.rs
day23/src/: lib.rs  part1.rs  part2.rs  part2_fast.rs
day24/: Cargo.toml
day24/benches/: benchmarks.rs
day24/src/: lib.rs  part1.rs  part2.rs
day25/: Cargo.toml
day25/benches/: benchmarks.rs
day25/src/: part1.rs
rust_advent_2023/: Cargo.toml
rust_advent_2023/src/: main.rs
