[workspace]

resolver = "2"

members = [
    "rust_advent_2023",
]

[workspace.lints.rust]
non_snake_case = "allow"

[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
divan = "0.1.5"
rayon = "1.8.0"
nalgebra = "0.32.3"
glam = "0.25.0"
